--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright me
 -->
 <head>
-	<title>An example website<title>
+	<title>An evev better example website<title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Even more content goes here.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; My Company 2014</p>
 	</footer>
 </body>
 </html>
