More comments to cause rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 
 -->
 <head>
-	<title>An silly website<title>
+	<title>An brand new example website<title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,11 +20,10 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Even more content goes here. blah blah
+			Even more content goes here. Or nothing does. 
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Richard 2014</p>
 	</footer>
 </body>
 </html>
