--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <!--
 	Copyright me
-		Adding comments befre rabase conflict
+		Adding comments before rebase conflict
+		And yet more
+
 -->
 <head>
-	<title>An new example website<title>
+	<title>An silly website<title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +20,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Even more content goes here.
+			Even more content goes here. blah blah
 		</p>
 	</main>
 	<footer class="container">
