Updated after stash

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 		Adding comments before rebase conflict
 -->
 <head>
-	<title>An brand new example website<title>
+	<title>A new example website<title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Richard 2020 </p>
+		<p>&copy; Richard 2020. All rights reserved </p>
 	</footer>
 </body>
 </html>
