Changes after stash branch

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 		Adding comments before rebase conflict
 -->
 <head>
-	<title>A new example website<title>
+	<title>A new stash website<title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
